--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,6 @@
   <string name="mode_pause">Paused\nPress Up To Resume</string>
   <string name="mode_lose_prefix">Game Over\nScore: </string>
   <string name="mode_lose_suffix">\nPress Up To Play</string>
-
-    <string name="snake_layout_text_text"></string>
+  <string name="snake_layout_text_text"></string>
+	<string name="app_name">Double You: Play And Suck</string>
 </resources>
