--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,10 +15,9 @@
 -->
 
 <resources>
-  <string name="mode_ready">Snake\nPress Up To Play</string>
-  <string name="mode_pause">Paused\nPress Up To Resume</string>
-  <string name="mode_lose_prefix">Game Over\nScore: </string>
-  <string name="mode_lose_suffix">\nPress Up To Play</string>
-  <string name="snake_layout_text_text"></string>
-	<string name="app_name">Double You: Play And Suck</string>
+  <string name="DoubleU_layout_text_text"></string>
+  <string name="app_name">Double You: Play And Suck</string>
+  <string name="welcome">Welcome to DoubleU!</string>
+  <string name="explain">This program can help you to take advantage of your two brain sides.</string>
+  <string name="start_comp">Let\'s rock!</string>
 </resources>
